@@ -46,7 +46,9 @@ gradle.taskGraph.whenReady({ graph ->
 
 subprojects {
   dependencies {
-    testCompile 'com.github.stefanbirkner:system-rules:' + project.'system-rules.version'
+    testCompile ('com.github.stefanbirkner:system-rules:' + project.'system-rules.version') {
+      exclude module: 'junit-dep'
+    }
     testCompile 'com.google.code.tempus-fugit:tempus-fugit:' + project.'tempus-fugit.version'
     testCompile 'com.jayway.awaitility:awaitility:' + project.'awaitility.version'
     testCompile 'edu.umd.cs.mtc:multithreadedtc:' + project.'multithreadedtc.version'
@@ -199,11 +201,16 @@ subprojects {
         }
         
         maxHeapSize '768m'
+//        jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-ea',"-XX:+PrintGC", "-XX:+PrintGCDetails","-XX:+PrintGCTimeStamps"]
         jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-ea']
 
         systemProperty 'gemfire.DEFAULT_MAX_OPLOG_SIZE', '10'
         systemProperty 'gemfire.disallowMcastDefaults', 'true'
         systemProperty 'jline.terminal', 'jline.UnsupportedTerminal'
+        def logLevel = System.getProperty('logLevel')
+        if (logLevel != null) {
+          systemProperty 'logLevel', logLevel
+        }
 
         def eol = System.getProperty('line.separator')
         def progress = new File(resultsDir, "$test.name-progress.txt")
